// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Select Matches snapshot when array prop "items" has one item: "[object Object]" 1`] = `
<styled.div
  data-tip=""
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    disabled={true}
    innerRef={[Function]}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </styled.div>
  <styled.div
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <styled.div
      id="searchInput"
      innerRef={[Function]}
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </styled.div>
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<styled.div
  data-tip="jest-auto-snapshots String Fixture"
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    disabled={false}
    innerRef={[Function]}
    onClick={[Function]}
    type="primary"
  >
    <ChevronDownIcon
      color="white"
    />
  </styled.div>
  <styled.div
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <styled.div
      id="searchInput"
      innerRef={[Function]}
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </styled.div>
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "hasIconOnly" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    disabled={true}
    innerRef={[Function]}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </styled.div>
  <styled.div
    hasIconOnly={false}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <styled.div
      id="searchInput"
      innerRef={[Function]}
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </styled.div>
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "hasSearch" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    disabled={true}
    innerRef={[Function]}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </styled.div>
  <styled.div
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSearch={false}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "isOpen" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    disabled={true}
    innerRef={[Function]}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </styled.div>
  <styled.div
    hasIconOnly={true}
    isOpen={false}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <styled.div
      id="searchInput"
      innerRef={[Function]}
    >
      <SearchIcon />
      <Search
        isOpen={false}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </styled.div>
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "isSplit" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  innerRef={[Function]}
  isSplit={false}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <styled.div
      id="searchInput"
      innerRef={[Function]}
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </styled.div>
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "multiSelect" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    disabled={true}
    innerRef={[Function]}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </styled.div>
  <styled.div
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <styled.div
      id="searchInput"
      innerRef={[Function]}
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </styled.div>
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={false}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "shortcutsEnabled" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    disabled={true}
    innerRef={[Function]}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </styled.div>
  <styled.div
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <styled.div
      id="searchInput"
      innerRef={[Function]}
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </styled.div>
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when passed all props 1`] = `
<styled.div
  data-tip=""
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    disabled={true}
    innerRef={[Function]}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </styled.div>
  <styled.div
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <styled.div
      id="searchInput"
      innerRef={[Function]}
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </styled.div>
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when passed only required props 1`] = `
<styled.div
  innerRef={[Function]}
  isSplit={false}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <Button
    disabled={false}
    fullWidth={false}
    hasIconOnly={false}
    innerRef={[Function]}
    isSelect={true}
    items={
      Array [
        Object {
          "id": "jest-auto-snapshots String Fixture",
          "title": "jest-auto-snapshots String Fixture",
        },
      ]
    }
    label=""
    loading={false}
    onClick={[Function]}
    selectPosition="bottom"
    size="medium"
    type="secondary"
  />
  <styled.div
    hasIconOnly={false}
    isOpen={null}
    position="bottom"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSearch={false}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;
